fix platinum banner

--- a/app/assets/scss/2-basics/_utility.scss
+++ b/app/assets/scss/2-basics/_utility.scss
@@ -40,3 +40,10 @@
   background: linear-gradient(to bottom, transparent 70%, $yellow-color 30%);
   display: inline;
 }
+
+.blue-bottom {
+  font-weight: 600;
+  background: linear-gradient(to bottom, transparent 70%, $blue-color 30%);
+  display: inline;
+}
+
