--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -63,7 +63,10 @@
       <div class="banner-containers">
         <div class="banner-left">
           <div class="title-notice">
-            自分に合ったビジネスカードを
+            <h3 class="title-content">
+              個人与信型ビジネスカード
+              {% include 'component/icons/circle-question.njk' %}
+            </h3>
           </div>
           <div class="ttl-primary">
             セゾンプラチナ・ビジネス・<br> アメリカン・エキスプレス®・カード
@@ -73,7 +76,7 @@
             <div class="card-img">
               <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
             </div>
-            <div class="card-description">初年度年会費無料</div>
+            <div class="card-description"><span class="yellow-bottom">初年度年会費無料</span></div>
           </div>
 
           <div class="banner-btn"><a class="blue_gradient_btn" href="#">お申し込みはこちら</a></div>
@@ -285,7 +288,7 @@
     <div class="containers">
       <h3 class="ttl-tertiary">DOCUMENTS</h3>
       <h1 class="ttl-quaternary">ビジネスカードを検討しているなら、知らないともったいない！</h1>
-      <h4 class="ttl-primary">「ビジネスカードの🉐活用ガイド」</h4>
+      <h4 class="ttl-primary"><span class="blue-bottom">「ビジネスカードの🉐活用ガイド」</span></h4>
 
       <div class="senary-content">
         <div class="content-img">
