--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -287,6 +287,9 @@
       margin-bottom: 30px;
       .card__box--txt {
         text-align: left;
+        @media #{$sp} {
+          margin-bottom: 0;
+        }
       }
     }
   }
