--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -95,6 +95,9 @@
           white-space: pre;
         }
       }
+      @media #{$sp} {
+        padding: 0px 25px;
+      }
     }
 
     &__banner {
@@ -568,6 +571,9 @@
         }
       }
     }
+    @media #{$sp} {
+      padding: 35px 0;
+    }
   }
 
   .section-reason-chosing {
@@ -584,9 +590,17 @@
         padding: 12px 20px;
       }
     }
+    .ttl-notice {
+      @media #{$sp} {
+        font-size: 16px;
+      }
+    }
     .ttl-tertiary {
       font-size: 32px;
       font-weight: bold;
+      @media #{$sp} {
+        font-size: 22px;
+      }
     }
   }
 
@@ -600,6 +614,11 @@
       position: relative;
       padding: 14px 64px 14px 48px;
       white-space: nowrap;
+      &.blue_gradient_btn {
+        @media #{$sp} {
+          max-width: 90%;
+        }
+      }
 
       &-tooltip {
         position: absolute;
@@ -610,7 +629,8 @@
         transform: translateX(-50%);
 
         @media #{$sp} {
-          top: -90px;
+          top: -115px;
+          width: 100%;
         }
 
         &__content {
@@ -630,6 +650,7 @@
           justify-content: center;
 
           @media #{$sp} {
+            width: 100%;
             white-space: pre;
           }
 
@@ -646,6 +667,9 @@
           }
         }
       }
+    }
+    @media #{$sp} {
+      margin-top: 150px;
     }
   }
 
