--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -488,7 +488,7 @@
     </section>
 
     <section id="faq" class="section-question-and-answer fadein">
-      <h5 class="ttl-sub">FAQ</h5>
+      <h5 class="ttl-secondary">FAQ</h5>
       <h2 class="ttl-primary">よくある質問</h2>
       <p class="ttl-tertiary">お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。</br>
         2営業日以内に担当者からご連絡させて頂きます。
