--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -68,7 +68,7 @@
 
   <section id="scale" class="section-secondary">
     <div class="containers">
-      <h2 class="ttl-secondary">ビジネスカードを選ぶときのポイント</h2>
+      <h2 class="ttl-primary">ビジネスカードを選ぶときのポイント</h2>
 
       <ul class="card-list">
         <li class="card">
@@ -669,8 +669,7 @@
 
       <div class="senary-content">
         <div class="content-img">
-          <img src="/assets/img/common/work_image.png" alt="work image" class="img-top">
-          <img src="/assets/img/common/work_image.png" alt="work image" class="img-bot">
+          <img src="/assets/img/business_card_creation/business_card _usage_guide.png" alt="work image" class="img-top">
         </div>
         <div class="content-detail">
           <div class="content-head">ビジネスカードのメリットを使い倒すためのオトクな活用方法をまるっと紹介！</div>
