--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -524,6 +524,31 @@
     .ttl-notice {
       font-family: "Futura";
     }
+
+    @media #{$sp} {
+      padding: 35px 0;
+    }
+    .card-type22 {
+      .useful-wp {
+        .containers {
+          .card {
+            .card__box {
+              .card__box--ttl {
+                @media #{$sp} {
+                  font-size: 19px;
+                }
+              }
+
+              .blue_gradient_btn {
+                @media #{$sp} {
+                  max-width: 85%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   .section-financing {
@@ -557,12 +582,23 @@
       box-shadow: 0 3px 20px #00000029;
       background: $white-color;
 
+      @media #{$sp} {
+        margin-bottom: 30px;
+        grid-template-columns: auto;
+        gap: 10px;
+      }
+
       .flow-item {
         position: relative;
         display: inline-block;
         padding-right: 24px;
         padding-left: 0;
         filter: drop-shadow(10px 0px 4px #00000029);
+
+        @media #{$sp} {
+          padding-right: 0;
+          filter: drop-shadow(0 10px 4px #00000029);
+        }
 
         &:last-child {
           padding: 0;
@@ -589,10 +625,8 @@
           );
 
           @media #{$sp} {
-            padding: 10px 0;
-            padding-right: 10px;
-            margin-left: -5px;
-            clip-path: polygon(0 0, 72px 0, 100% 50%, 72px 100%, 0 100%, 0 0);
+            padding: 20px 15px 30px 15px;
+            clip-path: polygon(50% 100%,0% 85%,0% 0%,100% 0%,100% 85%);
           }
 
           .flow-index {
@@ -642,7 +676,7 @@
             padding: 30px 35px 30px 30px;
 
             @media #{$sp} {
-              padding: 5px;
+              padding: 20px 30px 30px 30px;
             }
           }
           .flow-item-detail::after {
@@ -653,7 +687,7 @@
     }
 
     @media #{$sp} {
-      padding: 25px 15px;
+      padding: 30px 15px;
     }
   }
 
