--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -181,6 +181,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
     }
 
     .card-list {
@@ -251,6 +255,11 @@
       grid-template-columns: 1fr 2.6667fr;
       gap: 10px;
       margin-bottom: 10px;
+
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
+
       .col-left {
         background: #0297b5;
         color: #fff;
@@ -389,6 +398,10 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 40px;
+      @media #{$sp} {
+        gap: 15px;
+      }
+
       .card {
         background: #ffffff;
         box-shadow: 0px 3px 20px #00000029;
@@ -500,6 +513,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
     }
 
     .question-tab,
