--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -44,7 +44,7 @@
     link: "#faq"
   },
   {
-    text: "お申し込み",
+    text: "お問い合わせ",
     link: "#application"
   }
 ] %}
@@ -172,7 +172,7 @@
           </div>
 
           <div class="saison-introduce-description">
-            <h5 class="ttl-quinary bold">【サービス紹介動画（2分）】</h5>
+            <h5 class="ttl-quinary">【サービス紹介動画（2分）】</h5>
             <h4 class="ttl-quaternary">クレディセゾンが送るBtoB向け後払い決済・請求代行サービス「セゾンインボイス」</h4>
             <p class="ttl-quinary">セゾンインボイスができることをわかりやすく動画でご紹介しています。</p>
           </div>
@@ -437,11 +437,11 @@
         </ul>
 
         <div class="section-more">
-          <a href="#" class="act-more blue_gradient_btn">
+          <a href="/contact" class="act-more blue_gradient_btn">
             <div class="act-more-tooltip">
               <h4 class="act-more-tooltip__content">{{"貴社の課題に合わせて \n プランなどをご紹介いたします。 \n まずはお気軽にご相談ください。" | safe}}</h4>
             </div>
-            まずは無料登録からスタート
+            導入のご相談・お問い合わせはこちら（無料）
           </a>
         </div>
       </div>
