--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -56,7 +56,9 @@
 
 {# Main content #}
 {% block content %}
-{% include 'partial/sidebar.njk' %} 
+<div class="cospro">
+  {% include 'partial/sidebar.njk' %}
+</div>
 <main class="cospro-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
@@ -104,7 +106,7 @@
       <h4 class="ttl-tertiary">CosProとは</h4>
       <h2 class="ttl-primary">初期費用・ランニングコスト無料の法人向け出張手配サービスです。</h2>
       <h3 class="ttl-quaternary">
-        航空券、ホテル、レンタカー、新幹線など出張手配はすべてお任せ!<span class="font-bold">出張手配の手間から解放され、<br> ”適正化”と”可視化”も実現します。</span> 
+        航空券、ホテル、レンタカー、新幹線など出張手配はすべてお任せ!<span class="font-bold">出張手配の手間から解放され、<br> ”適正化”と”可視化”も実現します。</span>
       </h3>
 
       <div class="card-list">
@@ -129,7 +131,7 @@
 
   <section class="section-octonary">
     <div class="containers">
-      <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>      
+      <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>
       <div class="grid-card-containers">
         <a class="card">
           <div class="card-head">お悩み①</div>
@@ -139,9 +141,9 @@
             <li>{% include 'component/icons/circle-checked.njk' %} コスト意識の低い社員に手配を任せると高くなりがち</li>
             <li>{% include 'component/icons/circle-checked.njk' %} 購入したチケットが最適な価格なのかわからない</li>
           </ul>
-          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span> 
+          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
-        
+
         <a class="card">
           <div class="card-head">お悩み②</div>
           <h2 class="ttl-head">出張手配に時間がかかり <br>「見えないコスト」が上昇</h2>
@@ -150,7 +152,7 @@
             <li>{% include 'component/icons/circle-checked.njk' %} チケットを探すことに長い時間がかり、見えないコストが増えている気がする</li>
             <li>{% include 'component/icons/circle-checked.njk' %} 社員の立替が負担に、経理の仮払いが面倒</li>
           </ul>
-          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span> 
+          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
 
         <a class="card">
@@ -161,7 +163,7 @@
             <li>{% include 'component/icons/circle-checked.njk' %} 社員の出張状況を把握できていない</li>
             <li>{% include 'component/icons/circle-checked.njk' %} 不正な払戻を防止したい</li>
           </ul>
-          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span> 
+          <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
       </div>
     </div>
@@ -169,7 +171,7 @@
 
   <section class="section-quaternary">
     <div class="containers">
-    
+
       <h2 class="ttl-primary">CosProが、出張手配に関するお悩みを解決します。</h2>
 
       <div class="tooltip-container">
@@ -200,8 +202,8 @@
         </div>
 
         <ul class="step-list">
-          <li>（例）往復の特割航空券をパッケージ旅行商品に変更 </li> 
-          <li>（例）コードシェア便の場合、適切な航空会社から予約を行い料金を削減</li> 
+          <li>（例）往復の特割航空券をパッケージ旅行商品に変更 </li>
+          <li>（例）コードシェア便の場合、適切な航空会社から予約を行い料金を削減</li>
         </ul>
       </div>
 
@@ -212,7 +214,7 @@
         </div>
         <div class="step-arrow">{% include 'component/icons/step-arrow.njk' %} </div>
         <div class="ttl-secondary">規程に準拠して、<div class="text-underline"> 自動でチェック＆差し戻し !</div></div>
-    
+
         <div class="grid-card-containers">
           <a class="card">
             <div class="card-head">
@@ -257,7 +259,7 @@
         </div>
         <div class="step-arrow">{% include 'component/icons/step-arrow.njk' %} </div>
         <div class="ttl-secondary"><div class="text-underline"> 出張状況をデータ化・可視化。</div> ガバナンスを強化できます。</div>
-    
+
         <div class="ttl-quinary">
           社員様からのご予約を同じ条件でさらに安く手配できないか、取り間違いがないかなど当社のトラベルマネージャーがチェックを行い、問題がないものをご予約完了とするサービスです。ノウハウをもった「人」でないと解決できない独自のスキームです。
         </div>
@@ -287,7 +289,7 @@
     <div class="containers">
       <h4 class="ttl-tertiary">法人カード会員特典</h4>
       <h2 class="ttl-primary">クレディセゾンの法人向けカード会員様限定の特典をご用意しています。</h2>
-      
+
       <div class="notice-board">
         <div class="board-head">
           クレディセゾン発行の法人向けカード会員様限定優待
@@ -302,7 +304,7 @@
             <span class="float-end">{% include 'component/icons/circle-checked.njk' %}</span>
           </div>
           <div class="board-content">クレディセゾンオリジナル優待：1席あたり500円の割引</div>
-          
+
           <div></div>
           <div class="board-content">（JAL/ANA/ソラシドエア/スターフライヤーの日時変更可能な航空券※）</div>
 
@@ -421,7 +423,7 @@
                     <img src="/assets/img/cospro/card9.png" alt="work image" class="card-img">
                   </div>
                   <div class="card__info-content">
-                  
+
                     <span>CosProのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。</span>
                   </div>
 
