fix business_support_loan page

--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -78,7 +78,7 @@
               </div>
               ご相談・お問い合わせ
             </a>
-            <a href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" class="act-more orange_more2">
+            <a href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank" class="act-more orange_more2">
               <div class="act-more-tooltip">
                 <h4 class="act-more-tooltip__content">支払い.comが3分でわかる！</h4>
               </div>
@@ -131,7 +131,7 @@
         <div class="containers">
           <ul class="inherit card-list">
             <li class="card-type6">
-              <a href="#challenge-tax-returns" class="card">
+              <div class="card">
                 <div class="card-image">
                   <img src="/assets/img/business_support_loan/loan_service_1.png"/>
                 </div>
@@ -140,10 +140,10 @@
                     <strong>最大950万円</strong>までの<br/>キャッシング融資  ※1
                   </h4>
                 </div>
-              </a>
+              </div>
             </li>
             <li class="card-type6">
-              <a href="#challenge-improve-cash" class="card">
+              <div class="card">
                 <div class="card-image">
                   <img src="/assets/img/business_support_loan/loan_service_2.png"/>
                 </div>
@@ -153,10 +153,10 @@
                     <strong>2.8％～9.6%</strong>※2
                   </h4>
                 </div>
-              </a>
+              </div>
             </li>
             <li class="card-type6">
-              <a href="#" class="card">
+              <div class="card">
                 <div class="card-image">
                   <img src="/assets/img/business_support_loan/loan_service_3.png"/>
                 </div>
@@ -165,7 +165,7 @@
                     <strong>今使っているビジネスカード</strong><br/>に機能を追加するだけ
                   </h4>
                 </div>
-              </a>
+              </div>
             </li>
           </ul>
 
@@ -216,7 +216,7 @@
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">今すぐお申し込みをしたい</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査おお申し込み</a></div>
               </summary>
             </div>
           </div>
@@ -303,7 +303,7 @@
         </li>
       </ul>
 
-      <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60">審査お申込みはこちら</a></div>
+      <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査お申込みはこちら</a></div>
     </section>
 
     <section id="faq" class="section-question-and-answer fadein">
@@ -364,13 +364,13 @@
               <div href="#" class="card">
                 <summary class="card__box">
                   <div class="card__box--ttl">まずは相談・お問い合わせをしたい</br>という方はこちら</div>
-                  <div><a class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
+                  <div><a class="blue_gradient_btn" href="/contact">ご相談・お問い合わせ（無料）</a></div>
                 </summary>
             </div>
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">今すぐお申し込みをしたい</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査おお申し込み</a></div>
               </summary>
             </div>
           </div>
@@ -388,13 +388,13 @@
       <div class="container">
         <ul class="external-list">
           <li class="external-item">
-            <a class="external-item-link" href="https://www.saisoncard.co.jp/creditcard/cashing/notice/">
+            <a class="external-item-link" href="https://www.saisoncard.co.jp/creditcard/cashing/notice/" target="_blank">
               {% include 'component/icons/circle-list-style.njk' %}
               カードキャッシングご利用に関するお知らせ
             </a>
           </li>
           <li class="external-item">
-            <a class="external-item-link" href="https://www.saisoncard.co.jp/services/sj042-kashitsuke.html">
+            <a class="external-item-link" href="https://www.saisoncard.co.jp/services/sj042-kashitsuke.html" target="_blank">
               {% include 'component/icons/circle-list-style.njk' %}
               貸付条件表はこちら
             </a>
