--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -73,15 +73,15 @@
           </div>
           <div class="btn-action">
             <a href="/contact" target="_blank" class="act-more orange_more2">
-              <div class="act-more-tooltip">
+              {# <div class="act-more-tooltip">
                 <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
-              </div>
+              </div> #}
               ご相談・お問い合わせ
             </a>
             <a href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank" class="act-more orange_more2">
-              <div class="act-more-tooltip">
+              {# <div class="act-more-tooltip">
                 <h4 class="act-more-tooltip__content">支払い.comが3分でわかる！</h4>
-              </div>
+              </div> #}
               審査お申し込み
             </a>
           </div>
