--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -474,3 +474,11 @@
     }
   }
 }
+
+
+.section-license {
+  font-size: 13px;
+  color: $white-color;
+  background-color: $gray-color-8;
+  padding: 8px 0;
+}
