--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -30,10 +30,14 @@
     <div class="container-1200">
       <div class="banner-container">
         <div class="left-content">
-          <h3 class="ttl-tertiary">自分に合ったビジネスカードを</h3>
+          <div class="bg-title-content">
+            <h3 class="title-content">
+              自分に合ったビジネスカードを
+            </h3>
+          </div>
 
           <h1 class="ttl-primary">クレディセゾンのビジネスカード</h1>
-    
+
           <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
             最適なビジネスカードをご用意しています。</h4>
         </div>
@@ -641,7 +645,7 @@
           </div>
           <div class="text-content">
             <div class="ttl-quinary">ご利用目的やビジネス規模に合わせて、最適なビジネスカード探しをお手伝い!</div>
-            <div class="ttl-main">おすすめカード診断 
+            <div class="ttl-main">おすすめカード診断
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="20" class="arrow-svg" viewBox="0 0 25 20">
                 <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)" fill="#0297b5"/>
               </svg>
