--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -137,7 +137,7 @@ link: "#material"
       <h1 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h1>
       <div class="section-secondary-content">
         <div class="flex gap30">
-          <a href="#" class="card">
+          <div class="card">
             <span class="black_pill_btn small">広告業界</span>
             <h5 class="ttl-quinary">
               <span class="yellow-underline">広告出稿費の</span><br />
@@ -154,8 +154,8 @@ link: "#material"
                 足元資金がなく追加出稿ができない
               </li>
             </ul>
-          </a>
-          <a href="#" class="card">
+          </div>
+          <div class="card">
             <span class="black_pill_btn small">建設・製造業界</span>
             <h5 class="ttl-quinary">
               <span class="yellow-underline">大規模案件受注時の</span><br />
@@ -172,8 +172,8 @@ link: "#material"
                 ファクタリングを利用しているが、 利益率が下がっている
               </li>
             </ul>
-          </a>
-          <a href="#" class="card">
+          </div>
+          <div class="card">
             <span class="black_pill_btn small">建設・製造業界</span>
             <h5 class="ttl-quinary">
               <span class="yellow-underline">仕入れから売上化までの</span><br />
@@ -190,7 +190,7 @@ link: "#material"
                 支払いを先延ばししたいが、対応策が ない
               </li>
             </ul>
-          </a>
+          </div>
         </div>
       </div>
     </div>
