--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -198,7 +198,7 @@
         <div class="containers">
           <ul class="inherit card-list">
             <li class="card-type24">
-              <a href="#" class="card">
+              <div class="card">
                 <div class="card-index">お悩み①</div>
                 <h4 class="ttl-quaternary"><span class="yellow-bottom">請求・回収業務に</span></br>人と時間が奪われてしまう</h4>
                 <div class="card-image">
@@ -217,7 +217,7 @@
               </a>
             </li>
             <li class="card-type24">
-              <a href="#" class="card">
+              <div class="card">
                 <div class="card-index">お悩み②</div>
                 <h4 class="ttl-quaternary">取引先の業績悪化による</br><span class="yellow-bottom">未払いのリスク</span></h4>
                 <div class="card-image">
@@ -236,7 +236,7 @@
               </a>
             </li>
             <li class="card-type24">
-              <a href="#" class="card">
+              <div class="card">
                 <div class="card-index">お悩み③</div>
                 <h4 class="ttl-quaternary">支払い日までの</br><span class="yellow-bottom">運転資金確保が大変</span></h4>
                 <div class="card-image">
