--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -378,7 +378,7 @@
       </div>
     </section>
 
-    <section class="section-license fadein">
+    <section class="section-license fadein" style="padding:8px 0;">
       <div class="container">
         ※「アメリカン・エキスプレス」は、アメリカン・エキスプレスの登録商標です。(株)クレディセゾンは、アメリカン・エキスプレスのライセンスに基づき使用しています。
       </div>
