--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -218,6 +218,7 @@
 
       .ttl-primary {
         font-size: 42px;
+        text-shadow: 0px 0px 20px #05172c8d;
         margin-bottom: 0;
         text-align: left;
 
