--- a/app/assets/scss/4-pages/_business_efficiency.scss
+++ b/app/assets/scss/4-pages/_business_efficiency.scss
@@ -32,6 +32,7 @@
 
     .ttl-primary {
       font-size: 42px;
+      text-shadow: 0px 0px 20px #05172c8d;
       margin-bottom: 40px;
       text-align: left;
       line-height: 1;
