--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -39,6 +39,7 @@
     .ttl-primary {
       font-size: 32px;
       margin-bottom: 40px;
+      text-shadow: 0px 0px 20px #05172c8d;
       @media #{$sp} {
         font-size: 24px;
         margin-bottom: 20px;
@@ -175,6 +176,7 @@
         font-size: 42px;
         margin-bottom: 0;
         text-align: left;
+        text-shadow: 0px 0px 20px #05172c8d;
 
         @media #{$sp} {
           text-align: center;
