fix page welfare

--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -302,7 +302,7 @@
     <div class="card-type22">
       <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
         <div class="tooltip">
-          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}/h4>
+          <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}</h4>
         </div>
       </h3>
       <div class="useful-wp container">
@@ -321,7 +321,7 @@
           <div href="#" class="card">
             <summary class="card__box">
               <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
-              <div><a href="#" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
+              <div><a class="blue_gradient_btn" href="/contact">サポート担当に無料で相談する</a></div>
             </summary>
           </div>
         </div>
