--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -2,6 +2,7 @@
   margin: auto;
   padding: 140px 0 0px;
 
+
   .section-welcome {
     position: relative;
     min-height: 518px;
@@ -601,6 +602,7 @@
     }
 
     .ttl-secondary {
+      font-size: 32px;
       margin-bottom: 30px;
     }
 
