--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -96,9 +96,7 @@ header {
     .nav__item__dropdown {
       display: flex;
       align-items: center;
-      svg {
-        margin-left: 5px;
-      }
+
       &__search,
       &__support {
         &.open {
@@ -112,48 +110,8 @@ header {
       justify-content: space-between;
     }
   }
+
   .nav__dropdown {
-    &__list__search {
-      width: 100%;
-      background-color: $white-color;
-      display: none;
-      transition: all 0.3s ease-in-out;
-      animation: fadeInTop 0.3s ease-in;
-      &.open {
-        display: flex;
-      }
-      &.hiding {
-        transform: translateY(-500px);
-      }
-
-      @media #{$sp} {
-        height: 100vh;
-        position: absolute;
-        top: 50px;
-        left: 0;
-      }
-    }
-    &__list__support {
-      width: 100%;
-      background-color: $white-color;
-      transition: all 0.3s ease-in-out;
-      animation: fadeInTop 0.3s ease-in;
-      display: none;
-      &.open {
-        animation: fadeOutTop 0.3s;
-        display: flex;
-      }
-      &.hiding {
-        transform: translateY(-500px);
-      }
-
-      @media #{$sp} {
-        height: 100vh;
-        position: absolute;
-        top: 50px;
-        left: 10px;
-      }
-    }
     &__search {
       width: 33%;
       position: relative;
@@ -319,6 +277,68 @@ header {
     &__back {
       margin-top: 30px;
       text-align: center;
+    }
+  }
+}
+
+.header_menu_bg {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  transition: 0.3s opacity cubic-bezier(0, 0, 0.58, 1),
+    0.3s visibility cubic-bezier(0, 0, 0.58, 1);
+  background-color: rgba(0, 0, 0, 0.5);
+
+  &._active {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.header_menu_trigger {
+  svg {
+    margin-left: 5px;
+    transition: 0.3s cubic-bezier(0, 0, 0.58, 1);
+  }
+
+  .sub-menu {
+    display: flex;
+    width: 100%;
+    background-color: $white-color;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 138px;
+    left: 0;
+    border-top: 1px solid #bfcce5;
+    transition: 0.3s opacity 0s cubic-bezier(0, 0, 0.58, 1),
+      0.3s visibility 0s cubic-bezier(0, 0, 0.58, 1);
+  }
+
+  &.open {
+    .sub-menu {
+      visibility: visible;
+      opacity: 1;
+      pointer-events: auto;
+
+      @media #{$sp} {
+        height: 100vh;
+        position: absolute;
+        top: 50px;
+        left: 0;
+      }
+
+      .nav__dropdown__list {
+        a {
+          svg {
+            transform: unset;
+          }
+        }
+      }
     }
   }
 }
