fix improve cash flow page

--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -137,7 +137,7 @@
                 </div>
               </div>
 
-              <a href="#" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a>
+              <a href="/payment_com/" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -214,7 +214,7 @@
                 </li>
               </ul>
 
-              <a href="#" class="bondi_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a>
+              <a href="/business_support_loan/" class="bondi_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -243,7 +243,7 @@
                     <dt class="flex aic gap20 sp-fs">
                       <div class="number-circle">1</div>
                       <h5 class="ttl-senary">
-                        全国のコンビニ・ATM<span class="yellow-bottom">でご利用可能</span><span style="font-size: 16px">（ATM手数料は何度でも無料）</span>
+                        <span class="yellow-bottom">全国のコンビニ・ATM</span><span style="font-size: 16px">でご利用可能（ATM手数料は何度でも無料）</span>
                       </h5>
                     </dt>
                   </dl>
@@ -274,7 +274,7 @@
                 </div>
               </div>
 
-              <a href="#" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
+              <a href="https://loan.saisoncard.co.jp/" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -299,13 +299,13 @@
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">「詳しい資料が欲しい」</br>という方はこちら</div>
-                <div><a href="#" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+                <div><a href="/catalog_list/" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
           </div>
           <div href="#" class="card">
             <summary class="card__box">
               <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
-              <div><a href="#" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
+              <div><a href="/contact/" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
             </summary>
           </div>
         </div>
@@ -325,13 +325,13 @@
     <div class="container">
       <ul class="external-list">
         <li class="external-item">
-          <a class="external-item-link" href="#">
+          <a class="external-item-link" href="https://www.saisoncard.co.jp/creditcard/cashing/notice/" target="_blank">
             {% include 'component/icons/circle-list-style.njk' %}
             カードキャッシングご利用に関するお知らせ
           </a>
         </li>
         <li class="external-item">
-          <a class="external-item-link" href="#">
+          <a class="external-item-link" href="https://www.saisoncard.co.jp/services/sj042-kashitsuke.html" target="_blank">
             {% include 'component/icons/circle-list-style.njk' %}
             貸付条件表はこちら
           </a>
