--- a/app/assets/scss/4-pages/_improve_cash_flow.scss
+++ b/app/assets/scss/4-pages/_improve_cash_flow.scss
@@ -55,6 +55,7 @@
       line-height: 30px;
 
       .ttl-tertiary {
+        font-size: 21px;
         transform: skewX(15deg);
         color: #ffffff;
         margin-bottom: 0;
@@ -96,6 +97,7 @@
       color: #ffffff;
       line-height: 30px;
       font-size: 18px;
+      font-weight: 500;
 
       .ttl-primary {
         text-align: left;
@@ -169,6 +171,7 @@
         align-items: center;
         gap: 20px;
         width: calc(50% - 20px);
+        transition: all .3s;
 
         .title {
           color: $blue-color;
@@ -232,6 +235,18 @@
           color: white;
           background: $blue-color;
         }
+
+        &:hover {
+          opacity: 1;
+          box-shadow: 0px 3px 20px #00000029;
+          .action {
+            svg {
+              transition: all .3s;
+              position: relative;
+              top: 5px;
+            }
+          }
+        }
       }
     }
   }
@@ -264,7 +279,7 @@
       font-size: 20px;
       font-weight: bold;
       color: white;
-      padding: 18px 0;
+      padding: 15px 0;
       border-radius: 3px;
       height: 60px;
       background: $primary-color;
@@ -407,6 +422,7 @@
         font-weight: bold;
         height: 60px;
         margin-bottom: 0;
+        padding: 15px 0;
 
         @media #{$sp} {
           margin-left: 16px;
@@ -438,7 +454,7 @@
         }
 
         .sp-reverse {
-          margin-bottom: 50px;
+          margin-bottom: 57px;
 
           .sec-right-wrapper.visa {
             width: 194px;
@@ -505,6 +521,13 @@
             margin-bottom: 20px;
           }
 
+          .container .card__box-wrapper {
+            gap: 20px;
+            &.card__box__wrapper-right {
+              gap: 12px;
+            }
+          }
+
           .container .card__box-wrapper .card__box-title {
             max-width: unset;
             flex: 1;
@@ -538,7 +561,7 @@
 
           dd.description {
             padding: 0;
-            margin-bottom: 40px;
+            margin-bottom: 42px;
             font-size: 14px;
           }
         }
