--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -392,7 +392,7 @@
       position: relative;
       font-size: 20px;
       font-weight: bold;
-      padding: 0 10px;
+      padding: 0 20px;
       border: 1px solid $white-color;
       color: $white-color;
 
@@ -438,7 +438,7 @@
 
 .section-subinfo {
   .containers {
-    padding: 20px;
+    padding: 8px 0;
     text-align: left;
   }
   background: #797979;
@@ -457,6 +457,11 @@
         display: flex;
         gap: 10px;
         align-items: center;
+        svg {
+          text {
+            font-size: 15px;
+          }
+        }
       }
     }
   }
@@ -474,7 +479,6 @@
     }
   }
 }
-
 
 .section-license {
   font-size: 13px;
